# MinoMonitor

./: .gitignore  DESIGN_v1.md  DESIGN_v2.md  LICENSE  README.md  pyproject.toml
contrib/: com.minomon-watchdog.plist.template  com.threetrees.minomon-watchdog.plist
docs/: integrations.md
docs/development/: README.md
minomon/: __main__.py  advisor.py  app.py  automode.py  snapshot.py
minomon/actions/: _common.py  calm.py  freeze.py  outcomes.py  quit.py  watchdog.py
minomon/data/: config.py  insights.py  macos.py  pinned.py  sample.py  sampler.py  stub_sampler.py
minomon/ui/: dialog.py  insights.py  meters.py  processes.py  theme.py
