[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minomon"
version = "0.1.0"
description = "Mino Monitor"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "textual>=0.85",
  "psutil>=5.9",
  "rich>=13.0",
]

[tool.setuptools.packages.find]
include = ["minomon*"]
