[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minomon"
version = "0.1.0"
description = "Honest Apple Silicon memory monitor with manual intervention. TUI."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
  { name = "Amine Feliachi" },
]
keywords = ["macos", "monitor", "tui", "textual", "memory", "apple-silicon", "psutil"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Monitoring",
  "Topic :: Utilities",
]
dependencies = [
  "textual>=0.85",
  "psutil>=5.9",
  "rich>=13.0",
]

[project.scripts]
minomon = "minomon.__main__:main"

[tool.setuptools.packages.find]
include = ["minomon*"]
